CSVM-Designer/impl/eu.aniketos.securebpmn/src/main/java/org/antlr/satmc/SatmcParser.java
// $ANTLR 3.4 Satmc.g 2012-01-23 13:53:57

package org.antlr.satmc;

import eu.aniketos.securebpmn.satmc.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class SatmcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CFS", "CLAUSES", "COMMA", "COMMENTS", "CONSTANT", "C_BRACES", "C_BRACKET", "C_PARENTHESIS", "DETAILS", "ERROR", "FILE", "FTEXT", "GOAL", "INPUT", "NEWLINE", "NUMBER", "O_BRACES", "O_BRACKET", "O_PARENTHESIS", "PERCENT", "RULES", "STAT", "SUMMARY", "TRACE", "VERSION", "VERSION_NR", "WARNING", "WS"
    };

    public static final int EOF=-1;
    public static final int CFS=4;
    public static final int CLAUSES=5;
    public static final int COMMA=6;
    public static final int COMMENTS=7;
    public static final int CONSTANT=8;
    public static final int C_BRACES=9;
    public static final int C_BRACKET=10;
    public static final int C_PARENTHESIS=11;
    public static final int DETAILS=12;
    public static final int ERROR=13;
    public static final int FILE=14;
    public static final int FTEXT=15;
    public static final int GOAL=16;
    public static final int INPUT=17;
    public static final int NEWLINE=18;
    public static final int NUMBER=19;
    public static final int O_BRACES=20;
    public static final int O_BRACKET=21;
    public static final int O_PARENTHESIS=22;
    public static final int PERCENT=23;
    public static final int RULES=24;
    public static final int STAT=25;
    public static final int SUMMARY=26;
    public static final int TRACE=27;
    public static final int VERSION=28;
    public static final int VERSION_NR=29;
    public static final int WARNING=30;
    public static final int WS=31;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SatmcParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SatmcParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return SatmcParser.tokenNames; }
    public String getGrammarFileName() { return "Satmc.g"; }



    // $ANTLR start "output"
    // Satmc.g:37:1: output returns [SatmcMessage message] : ( ( NEWLINE )* ( NEWLINE section_warning )* ( error |s= result ) ( NEWLINE )* EOF |);
    public final SatmcMessage output() throws RecognitionException {
        SatmcMessage message = null;


        SatmcMessage s =null;


        try {
            // Satmc.g:38:5: ( ( NEWLINE )* ( NEWLINE section_warning )* ( error |s= result ) ( NEWLINE )* EOF |)
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0 >= INPUT && LA5_0 <= NEWLINE)) ) {
                alt5=1;
            }
            else if ( (LA5_0==EOF) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // Satmc.g:38:8: ( NEWLINE )* ( NEWLINE section_warning )* ( error |s= result ) ( NEWLINE )* EOF
                    {
                    // Satmc.g:38:8: ( NEWLINE )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==NEWLINE) ) {
                            int LA1_1 = input.LA(2);

                            if ( ((LA1_1 >= INPUT && LA1_1 <= NEWLINE)) ) {
                                alt1=1;
                            }


                        }


                        switch (alt1) {
                    	case 1 :
                    	    // Satmc.g:38:8: NEWLINE
                    	    {
                    	    match(input,NEWLINE,FOLLOW_NEWLINE_in_output168); 

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    // Satmc.g:38:17: ( NEWLINE section_warning )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==NEWLINE) ) {
                            int LA2_1 = input.LA(2);

                            if ( (LA2_1==WARNING) ) {
                                alt2=1;
                            }


                        }


                        switch (alt2) {
                    	case 1 :
                    	    // Satmc.g:38:19: NEWLINE section_warning
                    	    {
                    	    match(input,NEWLINE,FOLLOW_NEWLINE_in_output173); 

                    	    pushFollow(FOLLOW_section_warning_in_output175);
                    	    section_warning();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    // Satmc.g:38:46: ( error |s= result )
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==NEWLINE) ) {
                        alt3=1;
                    }
                    else if ( (LA3_0==INPUT) ) {
                        alt3=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 0, input);

                        throw nvae;

                    }
                    switch (alt3) {
                        case 1 :
                            // Satmc.g:38:48: error
                            {
                            pushFollow(FOLLOW_error_in_output182);
                            error();

                            state._fsp--;


                            message = new SatmcMessage(Summary.ERROR, null, null, null);

                            }
                            break;
                        case 2 :
                            // Satmc.g:39:18: s= result
                            {
                            pushFollow(FOLLOW_result_in_output206);
                            s=result();

                            state._fsp--;


                            message = s;

                            }
                            break;

                    }


                    // Satmc.g:40:19: ( NEWLINE )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==NEWLINE) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // Satmc.g:40:19: NEWLINE
                    	    {
                    	    match(input,NEWLINE,FOLLOW_NEWLINE_in_output228); 

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    match(input,EOF,FOLLOW_EOF_in_output231); 

                    }
                    break;
                case 2 :
                    // Satmc.g:42:5: 
                    {
                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return message;
    }
    // $ANTLR end "output"



    // $ANTLR start "error"
    // Satmc.g:44:1: error : NEWLINE section_error ;
    public final void error() throws RecognitionException {
        try {
            // Satmc.g:45:5: ( NEWLINE section_error )
            // Satmc.g:45:7: NEWLINE section_error
            {
            match(input,NEWLINE,FOLLOW_NEWLINE_in_error258); 

            pushFollow(FOLLOW_section_error_in_error260);
            section_error();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "error"



    // $ANTLR start "result"
    // Satmc.g:48:1: result returns [SatmcMessage message] : line_input NEWLINE ls= line_summary NEWLINE ( NEWLINE )? (lg= line_goal NEWLINE NEWLINE )? section_details NEWLINE NEWLINE line_version NEWLINE NEWLINE ( section_comments )? section_stat (st= section_trace )? (lc= line_cfs )? ;
    public final SatmcMessage result() throws RecognitionException {
        SatmcMessage message = null;


        Summary ls =null;

        SatmcFunction lg =null;

        List<SatmcTraceStep> st =null;

        List<SatmcFunction> lc =null;


        try {
            // Satmc.g:49:5: ( line_input NEWLINE ls= line_summary NEWLINE ( NEWLINE )? (lg= line_goal NEWLINE NEWLINE )? section_details NEWLINE NEWLINE line_version NEWLINE NEWLINE ( section_comments )? section_stat (st= section_trace )? (lc= line_cfs )? )
            // Satmc.g:49:7: line_input NEWLINE ls= line_summary NEWLINE ( NEWLINE )? (lg= line_goal NEWLINE NEWLINE )? section_details NEWLINE NEWLINE line_version NEWLINE NEWLINE ( section_comments )? section_stat (st= section_trace )? (lc= line_cfs )?
            {
            pushFollow(FOLLOW_line_input_in_result285);
            line_input();

            state._fsp--;


            match(input,NEWLINE,FOLLOW_NEWLINE_in_result287); 

            pushFollow(FOLLOW_line_summary_in_result291);
            ls=line_summary();

            state._fsp--;


            match(input,NEWLINE,FOLLOW_NEWLINE_in_result293); 

            // Satmc.g:49:50: ( NEWLINE )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==NEWLINE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // Satmc.g:49:50: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_result295); 

                    }
                    break;

            }


            // Satmc.g:49:59: (lg= line_goal NEWLINE NEWLINE )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==GOAL||LA7_0==WS) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // Satmc.g:49:61: lg= line_goal NEWLINE NEWLINE
                    {
                    pushFollow(FOLLOW_line_goal_in_result302);
                    lg=line_goal();

                    state._fsp--;


                    match(input,NEWLINE,FOLLOW_NEWLINE_in_result304); 

                    match(input,NEWLINE,FOLLOW_NEWLINE_in_result306); 

                    }
                    break;

            }


            pushFollow(FOLLOW_section_details_in_result311);
            section_details();

            state._fsp--;


            match(input,NEWLINE,FOLLOW_NEWLINE_in_result313); 

            match(input,NEWLINE,FOLLOW_NEWLINE_in_result315); 

            pushFollow(FOLLOW_line_version_in_result317);
            line_version();

            state._fsp--;


            match(input,NEWLINE,FOLLOW_NEWLINE_in_result319); 

            match(input,NEWLINE,FOLLOW_NEWLINE_in_result321); 

            // Satmc.g:49:154: ( section_comments )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==COMMENTS) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // Satmc.g:49:154: section_comments
                    {
                    pushFollow(FOLLOW_section_comments_in_result323);
                    section_comments();

                    state._fsp--;


                    }
                    break;

            }


            pushFollow(FOLLOW_section_stat_in_result326);
            section_stat();

            state._fsp--;


            // Satmc.g:49:187: (st= section_trace )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==TRACE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // Satmc.g:49:187: st= section_trace
                    {
                    pushFollow(FOLLOW_section_trace_in_result330);
                    st=section_trace();

                    state._fsp--;


                    }
                    break;

            }


            // Satmc.g:49:205: (lc= line_cfs )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==CFS) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // Satmc.g:49:205: lc= line_cfs
                    {
                    pushFollow(FOLLOW_line_cfs_in_result335);
                    lc=line_cfs();

                    state._fsp--;


                    }
                    break;

            }


            message = new SatmcMessage(ls, lg, st, lc);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return message;
    }
    // $ANTLR end "result"



    // $ANTLR start "section_warning"
    // Satmc.g:53:1: section_warning : WARNING ( (~ NEWLINE )+ NEWLINE )* NEWLINE ;
    public final void section_warning() throws RecognitionException {
        try {
            // Satmc.g:54:5: ( WARNING ( (~ NEWLINE )+ NEWLINE )* NEWLINE )
            // Satmc.g:54:7: WARNING ( (~ NEWLINE )+ NEWLINE )* NEWLINE
            {
            match(input,WARNING,FOLLOW_WARNING_in_section_warning363); 

            // Satmc.g:54:15: ( (~ NEWLINE )+ NEWLINE )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( ((LA12_0 >= CFS && LA12_0 <= INPUT)||(LA12_0 >= NUMBER && LA12_0 <= WS)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // Satmc.g:54:17: (~ NEWLINE )+ NEWLINE
            	    {
            	    // Satmc.g:54:17: (~ NEWLINE )+
            	    int cnt11=0;
            	    loop11:
            	    do {
            	        int alt11=2;
            	        int LA11_0 = input.LA(1);

            	        if ( ((LA11_0 >= CFS && LA11_0 <= INPUT)||(LA11_0 >= NUMBER && LA11_0 <= WS)) ) {
            	            alt11=1;
            	        }


            	        switch (alt11) {
            	    	case 1 :
            	    	    // Satmc.g:
            	    	    {
            	    	    if ( (input.LA(1) >= CFS && input.LA(1) <= INPUT)||(input.LA(1) >= NUMBER && input.LA(1) <= WS) ) {
            	    	        input.consume();
            	    	        state.errorRecovery=false;
            	    	    }
            	    	    else {
            	    	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	    	        throw mse;
            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt11 >= 1 ) break loop11;
            	                EarlyExitException eee =
            	                    new EarlyExitException(11, input);
            	                throw eee;
            	        }
            	        cnt11++;
            	    } while (true);


            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_section_warning375); 

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            match(input,NEWLINE,FOLLOW_NEWLINE_in_section_warning380); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "section_warning"



    // $ANTLR start "section_error"
    // Satmc.g:57:1: section_error : ERROR ( (~ NEWLINE )+ NEWLINE )* NEWLINE NEWLINE ( PERCENT ( (~ NEWLINE )+ NEWLINE )* NEWLINE )? ;
    public final void section_error() throws RecognitionException {
        try {
            // Satmc.g:58:5: ( ERROR ( (~ NEWLINE )+ NEWLINE )* NEWLINE NEWLINE ( PERCENT ( (~ NEWLINE )+ NEWLINE )* NEWLINE )? )
            // Satmc.g:58:7: ERROR ( (~ NEWLINE )+ NEWLINE )* NEWLINE NEWLINE ( PERCENT ( (~ NEWLINE )+ NEWLINE )* NEWLINE )?
            {
            match(input,ERROR,FOLLOW_ERROR_in_section_error401); 

            // Satmc.g:58:13: ( (~ NEWLINE )+ NEWLINE )*
            loop14:
            do {
                int alt14=2;
                int LA14_0 = input.LA(1);

                if ( ((LA14_0 >= CFS && LA14_0 <= INPUT)||(LA14_0 >= NUMBER && LA14_0 <= WS)) ) {
                    alt14=1;
                }


                switch (alt14) {
            	case 1 :
            	    // Satmc.g:58:15: (~ NEWLINE )+ NEWLINE
            	    {
            	    // Satmc.g:58:15: (~ NEWLINE )+
            	    int cnt13=0;
            	    loop13:
            	    do {
            	        int alt13=2;
            	        int LA13_0 = input.LA(1);

            	        if ( ((LA13_0 >= CFS && LA13_0 <= INPUT)||(LA13_0 >= NUMBER && LA13_0 <= WS)) ) {
            	            alt13=1;
            	        }


            	        switch (alt13) {
            	    	case 1 :
            	    	    // Satmc.g:
            	    	    {
            	    	    if ( (input.LA(1) >= CFS && input.LA(1) <= INPUT)||(input.LA(1) >= NUMBER && input.LA(1) <= WS) ) {
            	    	        input.consume();
            	    	        state.errorRecovery=false;
            	    	    }
            	    	    else {
            	    	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	    	        throw mse;
            	    	    }


            	    	    }
            	    	    break;

            	    	default :
            	    	    if ( cnt13 >= 1 ) break loop13;
            	                EarlyExitException eee =
            	                    new EarlyExitException(13, input);
            	                throw eee;
            	        }
            	        cnt13++;
            	    } while (true);


            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_section_error413); 

            	    }
            	    break;

            	default :
            	    break loop14;
                }
            } while (true);


            match(input,NEWLINE,FOLLOW_NEWLINE_in_section_error418); 

            match(input,NEWLINE,FOLLOW_NEWLINE_in_section_error420); 

            // Satmc.g:58:56: ( PERCENT ( (~ NEWLINE )+ NEWLINE )* NEWLINE )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==PERCENT) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // Satmc.g:58:58: PERCENT ( (~ NEWLINE )+ NEWLINE )* NEWLINE
                    {
                    match(input,PERCENT,FOLLOW_PERCENT_in_section_error424); 

                    // Satmc.g:58:66: ( (~ NEWLINE )+ NEWLINE )*
                    loop16:
                    do {
                        int alt16=2;
                        int LA16_0 = input.LA(1);

                        if ( ((LA16_0 >= CFS && LA16_0 <= INPUT)||(LA16_0 >= NUMBER && LA16_0 <= WS)) ) {
                            alt16=1;
                        }


                        switch (alt16) {
                    	case 1 :
                    	    // Satmc.g:58:68: (~ NEWLINE )+ NEWLINE
                    	    {
                    	    // Satmc.g:58:68: (~ NEWLINE )+
                    	    int cnt15=0;
                    	    loop15:
                    	    do {
                    	        int alt15=2;
                    	        int LA15_0 = input.LA(1);

                    	        if ( ((LA15_0 >= CFS && LA15_0 <= INPUT)||(LA15_0 >= NUMBER && LA15_0 <= WS)) ) {
                    	            alt15=1;
                    	        }


                    	        switch (alt15) {
                    	    	case 1 :
                    	    	    // Satmc.g:
                    	    	    {
                    	    	    if ( (input.LA(1) >= CFS && input.LA(1) <= INPUT)||(input.LA(1) >= NUMBER && input.LA(1) <= WS) ) {
                    	    	        input.consume();
                    	    	        state.errorRecovery=false;
                    	    	    }
                    	    	    else {
                    	    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	    	        throw mse;
                    	    	    }


                    	    	    }
                    	    	    break;

                    	    	default :
                    	    	    if ( cnt15 >= 1 ) break loop15;
                    	                EarlyExitException eee =
                    	                    new EarlyExitException(15, input);
                    	                throw eee;
                    	        }
                    	        cnt15++;
                    	    } while (true);


                    	    match(input,NEWLINE,FOLLOW_NEWLINE_in_section_error436); 

                    	    }
                    	    break;

                    	default :
                    	    break loop16;
                        }
                    } while (true);


                    match(input,NEWLINE,FOLLOW_NEWLINE_in_section_error441); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "section_error"



    // $ANTLR start "line_input"
    // Satmc.g:61:1: line_input : INPUT WS target ( WS )? ;
    public final void line_input() throws RecognitionException {
        try {
            // Satmc.g:62:5: ( INPUT WS target ( WS )? )
            // Satmc.g:62:7: INPUT WS target ( WS )?
            {
            match(input,INPUT,FOLLOW_INPUT_in_line_input461); 

            match(input,WS,FOLLOW_WS_in_line_input463); 

            pushFollow(FOLLOW_target_in_line_input465);
            target();

            state._fsp--;


            // Satmc.g:62:23: ( WS )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==WS) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // Satmc.g:62:23: WS
                    {
                    match(input,WS,FOLLOW_WS_in_line_input467); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "line_input"



    // $ANTLR start "line_summary"
    // Satmc.g:65:1: line_summary returns [Summary res] : SUMMARY WS sr= summary_result ( WS )? ;
    public final Summary line_summary() throws RecognitionException {
        Summary res = null;


        SatmcParser.summary_result_return sr =null;


        try {
            // Satmc.g:66:5: ( SUMMARY WS sr= summary_result ( WS )? )
            // Satmc.g:66:7: SUMMARY WS sr= summary_result ( WS )?
            {
            match(input,SUMMARY,FOLLOW_SUMMARY_in_line_summary493); 

            match(input,WS,FOLLOW_WS_in_line_summary495); 

            pushFollow(FOLLOW_summary_result_in_line_summary499);
            sr=summary_result();

            state._fsp--;


            // Satmc.g:66:36: ( WS )?
            int alt19=2;
            int LA19_0 = input.LA(1);

            if ( (LA19_0==WS) ) {
                alt19=1;
            }
            switch (alt19) {
                case 1 :
                    // Satmc.g:66:36: WS
                    {
                    match(input,WS,FOLLOW_WS_in_line_summary501); 

                    }
                    break;

            }


            if ("ATTACK_FOUND".equals((sr!=null?input.toString(sr.start,sr.stop):null))) {
                						res = Summary.ATTACK_FOUND;
                					  } else if ("NO_ATTACK_FOUND".equals((sr!=null?input.toString(sr.start,sr.stop):null))) {
                					  	res = Summary.NO_ATTACK_FOUND;
                					  } else if ("INCONCLUSIVE".equals((sr!=null?input.toString(sr.start,sr.stop):null))) {
                					  	res = Summary.INCONCLUSIVE;
                					  } else {
                					  	res = Summary.UNKNOWN;
                					  }
                					 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return res;
    }
    // $ANTLR end "line_summary"



    // $ANTLR start "line_goal"
    // Satmc.g:78:1: line_goal returns [SatmcFunction res] : ( WS )? GOAL WS f= function ( WS )? ;
    public final SatmcFunction line_goal() throws RecognitionException {
        SatmcFunction res = null;


        SatmcFunction f =null;


        try {
            // Satmc.g:79:5: ( ( WS )? GOAL WS f= function ( WS )? )
            // Satmc.g:79:7: ( WS )? GOAL WS f= function ( WS )?
            {
            // Satmc.g:79:7: ( WS )?
            int alt20=2;
            int LA20_0 = input.LA(1);

            if ( (LA20_0==WS) ) {
                alt20=1;
            }
            switch (alt20) {
                case 1 :
                    // Satmc.g:79:7: WS
                    {
                    match(input,WS,FOLLOW_WS_in_line_goal529); 

                    }
                    break;

            }


            match(input,GOAL,FOLLOW_GOAL_in_line_goal532); 

            match(input,WS,FOLLOW_WS_in_line_goal534); 

            pushFollow(FOLLOW_function_in_line_goal538);
            f=function();

            state._fsp--;


            res = f;

            // Satmc.g:79:47: ( WS )?
            int alt21=2;
            int LA21_0 = input.LA(1);

            if ( (LA21_0==WS) ) {
                alt21=1;
            }
            switch (alt21) {
                case 1 :
                    // Satmc.g:79:47: WS
                    {
                    match(input,WS,FOLLOW_WS_in_line_goal542); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return res;
    }
    // $ANTLR end "line_goal"



    // $ANTLR start "section_details"
    // Satmc.g:82:1: section_details : line_details ( NEWLINE line_detail )* ;
    public final void section_details() throws RecognitionException {
        try {
            // Satmc.g:83:5: ( line_details ( NEWLINE line_detail )* )
            // Satmc.g:83:7: line_details ( NEWLINE line_detail )*
            {
            pushFollow(FOLLOW_line_details_in_section_details560);
            line_details();

            state._fsp--;


            // Satmc.g:83:20: ( NEWLINE line_detail )*
            loop22:
            do {
                int alt22=2;
                int LA22_0 = input.LA(1);

                if ( (LA22_0==NEWLINE) ) {
                    int LA22_1 = input.LA(2);

                    if ( (LA22_1==CONSTANT||LA22_1==WS) ) {
                        alt22=1;
                    }


                }


                switch (alt22) {
            	case 1 :
            	    // Satmc.g:83:22: NEWLINE line_detail
            	    {
            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_section_details564); 

            	    pushFollow(FOLLOW_line_detail_in_section_details566);
            	    line_detail();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop22;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "section_details"



    // $ANTLR start "line_details"
    // Satmc.g:86:1: line_details : DETAILS ( WS )? ;
    public final void line_details() throws RecognitionException {
        try {
            // Satmc.g:87:5: ( DETAILS ( WS )? )
            // Satmc.g:87:7: DETAILS ( WS )?
            {
            match(input,DETAILS,FOLLOW_DETAILS_in_line_details586); 

            // Satmc.g:87:15: ( WS )?
            int alt23=2;
            int LA23_0 = input.LA(1);

            if ( (LA23_0==WS) ) {
                alt23=1;
            }
            switch (alt23) {
                case 1 :
                    // Satmc.g:87:15: WS
                    {
                    match(input,WS,FOLLOW_WS_in_line_details588); 

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "line_details"



    // $ANTLR start "line_detail"
    // Satmc.g:90:1: line_detail : ( WS )? CONSTANT ( WS )? ;
    public final void line_detail() throws RecognitionException {
        try {
            // Satmc.g:91:5: ( ( WS )? CONSTANT ( WS )? )
